--- a/module_login/build.gradle
+++ b/module_login/build.gradle
@@ -45,116 +45,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.1'
-    implementation 'com.github.android-pf:elk-common:0.0.1'
+    implementation 'com.github.android-pf:elk-common:0.0.3'
     annotationProcessor 'com.github.hufeiyang.Android-AppLifecycleMgr:applifecycle-compiler:1.0.4'
 
     //依赖export_cart
-//    implementation 'com.github.hufeiyang.Cart:export_cart:1.0.8'
-    implementation project(path: ':export_login')
+    implementation 'com.github.android-pf:elk-login:0.0.1'
+//    implementation project(path: ':export_login')
 
 }
-
-
-//if (isModule.toBoolean()) {
-//    apply plugin: 'com.android.application'
-//} else {
-//    apply plugin: 'com.android.library'
-//}
-//apply plugin: 'kotlin-android'
-//apply plugin: 'kotlin-android-extensions'
-//android {
-//    compileSdkVersion 30
-//    buildToolsVersion "30.0.2"
-//
-//    defaultConfig {
-//        minSdkVersion 22
-//        targetSdkVersion 30
-//        versionCode 1
-//        versionName "1.0"
-//
-//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-//        consumerProguardFiles "consumer-rules.pro"
-//
-//        javaCompileOptions {
-//            annotationProcessorOptions {
-//                arguments = [AROUTER_MODULE_NAME: project.getName()]
-//            }
-//        }
-//    }
-//
-//    sourceSets {
-//        main {
-//            // 单独调试与集成调试时使用不同的 AndroidManifest.xml 文件
-//            if (isModule.toBoolean()) {
-//                manifest.srcFile 'src/main/moduleManifest/AndroidManifest.xml'
-//            } else {
-//                manifest.srcFile 'src/main/AndroidManifest.xml'
-//            }
-//        }
-//    }
-//
-//
-//    buildTypes {
-//        debug {
-//            buildConfigField("String", "API", "\"" + rootProject.ext.server["debugServerUrl"] + "\"")
-//        }
-//        release {
-//            minifyEnabled false
-//            buildConfigField("String", "API", "\"" + rootProject.ext.server["releaseServerUrl"] + "\"")
-//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//        }
-//    }
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
-//    kotlinOptions {
-//        jvmTarget = '1.8'
-//    }
-//}
-//
-//dependencies {
-//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    implementation 'androidx.appcompat:appcompat:1.2.0'
-//    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-//    implementation 'androidx.core:core-ktx:1.2.0'
-//    implementation 'com.google.android.material:material:1.1.0'
-//    testImplementation 'junit:junit:4.+'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-//
-//    annotationProcessor 'com.alibaba:arouter-compiler:1.2.1'
-//    implementation 'com.github.hufeiyang:Common:1.0.2'
-//
-//    //------------
-//    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-//    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-//
-//    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-//    implementation 'com.google.android.material:material:1.1.0'
-//
-//
-//    //glide图片加载框架
-//    final GLIDE_VERSION = '4.11.0'
-//    implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
-//    implementation "com.github.bumptech.glide:okhttp3-integration:$GLIDE_VERSION"
-//
-//    //网络请求框架
-//    final RETROFIT_VERSION = '2.8.1'
-//    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-//    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
-//
-//    //网络请求cookie缓存
-//    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
-//
-//    //PhotoView
-//    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-//
-//    //刷新框架
-//    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
-//    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'
-//
-//    //EventBus
-//    implementation 'org.greenrobot:eventbus:3.2.0'
-//}
